# ishallopen

./: .gitattributes  .gitignore  README.md  about.rst  build.sh  halldates.js  index.html  ishallopentoday.cabal  ishallopentoday.js  stack.yaml
app/: Main.hs
client/: client.cabal  ishallopentoday-client.cabal  package.yaml  stack.yaml
client/app/: Main.hs
client/node/: Main.hs
client/src/: IsHallOpenToday.hs  Lib.hs
client/src/IsHallOpenToday/: Dispatcher.hs  Store.hs  View.hs
common/: README.md  ishallopentoday-common.cabal  package.yaml
common/app/: Main.hs
common/src/: HallDates.hs
common/src/IsHallOpenToday/: Common.hs  Css.hs  HallDates.hs  Html.hs  Lens.hs
common/test/: HallDatesSpec.hs
common/test/IsHallOpenToday/: HallDatesSpec.hs
deploy/: README.md  deploy.cabal  package.yaml
deploy/app/: Main.hs
deploy/src/: Build.hs
deploy/test/: BuildSpec.hs
html/: README.md  ishallopentoday-html.cabal  package.yaml
html/app/: Main.hs
html/src/IsHallOpenToday/: Css.hs  Html.hs
ishallopentoday/: contact.markdown  ishallopentoday.cabal  stack.yaml
js/: ishallopentoday-js.cabal
js/app/: Main.hs
js/src/: Lib.hs
js/src/IsHallOpenToday/: JS.hs
server/: ishallopentoday-server.cabal  package.yaml  server.cabal  stack.yaml
server/app/: Main.hs
server/src/: HallDates.hs  IsHallOpenToday.hs  Lens.hs  Lib.hs
server/test/: HallDatesSpec.hs
src/: Css.hs  HallDates.hs  HallWebSimple.hs  IsHallOpenToday.hs
