name:                ishallopentoday
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/dbaynard/ishallopentoday#readme
license:             BSD3
license-file:        LICENSE
author:              David Baynard
maintainer:          davidbaynard@gmail.com
copyright:           2016 David Baynard
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     IsHallOpenToday
                       HallDates
                       Lens
                       Css
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , basic-prelude
                     , clay
                     , lucid
                     , mtl
                     , profunctors
                     , servant-server
                     , servant-lucid
                     , string-conv
                     , thyme
                     , wai
                     , warp
  default-language:    Haskell2010

executable ishallopentoday-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ishallopentoday
  default-language:    Haskell2010

test-suite ishallopentoday-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , old-locale
                     , QuickCheck
                     , ishallopentoday
                     , thyme
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dbaynard/ishallopentoday
