name:                ishallopentoday-client
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/dbaynard/ishallopentoday#readme
license:             BSD3
license-file:        LICENSE
author:              David Baynard
maintainer:          davidbaynard@gmail.com
copyright:           2016 David Baynard
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , ghcjs-base
  default-language:    Haskell2010

executable client-output
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base
                     , ghcjs-base
                     , ishallopentoday-client
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dbaynard/ishallopentoday
