name:                ishallopentoday-js
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/dbaynard/ishallopentoday#readme
license:             BSD3
license-file:        LICENSE
author:              David Baynard
maintainer:          davidbaynard@gmail.com
copyright:           2016 David Baynard
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     IsHallOpenToday.JS
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , basic-prelude
                     , ishallopentoday-common
                     , ishallopentoday-server
                     , servant-js
  default-language:    Haskell2010

executable js-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ishallopentoday-js
  default-language:    Haskell2010

test-suite js-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ishallopentoday-js
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dbaynard/ishallopentoday
